# colcon-rosdoc2

./: setup.cfg
colcon_rosdoc2/task/ament_cmake/: rosdoc2.py
colcon_rosdoc2/verb/: doc.py
