[metadata]
name = colcon-rosdoc2
version = attr: colcon_rosdoc2.__version__
keywords = colcon

[options]
python_requires = >=3.6
install_requires =
  colcon-core>=0.5.2
  packaging
packages = find:
zip_safe = true

[options.entry_points]
colcon_core.verb =
    doc = colcon_rosdoc2.verb.doc:DocVerb
colcon_rosdoc2.task.rosdoc2 =
    ros.ament_cmake = colcon_rosdoc2.task.ament_cmake.rosdoc2:Rosdoc2Task
